Waiting thread problem fixed